# svg-to-token-stl

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
